[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
rand = "0.8.5"
smooth-bevy-cameras = "0.8.0"
# flamegraph = "0.6.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = true

[profile.release]

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
